--- a/pages/lists.mdx
+++ b/pages/lists.mdx
@@ -33,6 +33,13 @@ This list of lists is an endless work in progress, so come back to check frequen
   - One of the most beautiful songs I've ever heard, right up there with [Eclipse by Natalia Lafourcade](https://open.spotify.com/track/3gEQc4TtNyDxkwhQhLQTuw?si=my2__Lr2S6e5WfbIqHp-jw).
 - [Green Eyes, Uncle Chris](https://open.spotify.com/track/31WU1s85w50W8gWzkP6Qmz?si=bUEuqSasQ_6MoRhfX-lx9w)
   - Someone dedicated this song to me and I still think that it's the most charming thing that anyone has done for me.
+  
+### Dating
+
+- I'm a strong believer in "you pay for your stuff, I pay for my stuff.
+  - Aside from my personality (I'm very frugal), I just don't believe in paying for someone else's stuff.
+  - Every once in a while, I'll buy my partner stuff or pay for a lunch though: it doesn't mean "be a bad partner".
+  - I believe in a strong relationship, both folks should be financially independent.
 
 ### Quotes
 
