--- a/pages/lists.mdx
+++ b/pages/lists.mdx
@@ -36,7 +36,7 @@ This list of lists is an endless work in progress, so come back to check frequen
   
 ### Dating
 
-- I'm a strong believer in "you pay for your stuff, I pay for my stuff.
+- I'm a strong believer in "you pay for your stuff, I pay for my stuff".
   - Aside from my personality (I'm very frugal), I just don't believe in paying for someone else's stuff.
   - Every once in a while, I'll buy my partner stuff or pay for a lunch though: it doesn't mean "be a bad partner".
   - I believe in a strong relationship, both folks should be financially independent.
