--- a/pages/lists.mdx
+++ b/pages/lists.mdx
@@ -37,7 +37,7 @@ This list of lists is an endless work in progress, so come back to check frequen
 ### Dating
 
 - I'm a strong believer in "you pay for your stuff, I pay for my stuff".
-  - Aside from my personality (I'm very frugal), I just don't believe in paying for someone else's stuff.
+  - If we're going on a date, you're buying your own lunch and I'll pay mine. If we're both using a service, we split the bill.
   - Every once in a while, I'll buy my partner stuff or pay for a lunch though: it doesn't mean "be a bad partner".
   - I believe in a strong relationship, both folks should be financially independent.
 
