--- a/pages/lists.mdx
+++ b/pages/lists.mdx
@@ -40,8 +40,9 @@ This list of lists is an endless work in progress, so come back to check frequen
   - If we're going on a date, you're buying your own lunch and I'll pay mine. If we're both using a service, we split the bill.
   - Every once in a while, I'll buy my partner stuff or pay for a lunch though: it doesn't mean "be a bad partner".
   - I believe in a strong relationship, both folks should be financially independent.
+- Make me a playlist.
+  - Music is my love language. 
 
 ### Quotes
 
 - "Your happiness is intertwined with your outlook on life."
-- "Déjenme llorar..." — [Carla Morrison](https://open.spotify.com/track/61paDgouceUmuVTsoUO5TD?si=qmOWfeGKTq2PmiFhPJMJPw)
