Fix Inter + update lists

--- a/pages/lists.mdx
+++ b/pages/lists.mdx
@@ -33,15 +33,49 @@ This list of lists is an endless work in progress, so come back to check frequen
   - One of the most beautiful songs I've ever heard, right up there with [Eclipse by Natalia Lafourcade](https://open.spotify.com/track/3gEQc4TtNyDxkwhQhLQTuw?si=my2__Lr2S6e5WfbIqHp-jw).
 - [Green Eyes, Uncle Chris](https://open.spotify.com/track/31WU1s85w50W8gWzkP6Qmz?si=bUEuqSasQ_6MoRhfX-lx9w)
   - Someone dedicated this song to me and I still think that it's the most charming thing that anyone has done for me.
-  
+- [Careful Listening](https://open.spotify.com/playlist/0wl0VvhexoOVYrrURGC7lo?si=nV4KcQ1FQ8ewHPhx3CyGVw)
+  - This playlist is full of musically intense songs.
+- [House Vibes](https://open.spotify.com/playlist/5pgEceOwH8twhsrFPsIyMg?si=yAKkLo6rRcSd9bTDtMdXKA)
+  - A great electronic music playlist for work or play.
+- [Leningrado, Joaquín Sabina](https://open.spotify.com/track/5nZoN9TU6MATEcWg4NWVSa?si=H3ra2Z4nQnu9wJITftOsZg)
+  - I love how full of history this song is.
+  - It's a song about youthful exuberance and a failed revolution.
+    - This song is about a failed love, united by their energy and belief in what Sabina calls "the new man".
+    - Joaquín was active in young Communist circles when he was young, subscribing to their ideals.
+      - From: [Toda generación tiene su ilusión juvenil y su desencanto, según Joaquín Sabina (Every generation has its youthful illusions and a disappontment)](https://www.efe.com/efe/america/gente/toda-generacion-tiene-su-ilusion-juvenil-y-desencanto-segun-joaquin-sabina/20000014-3352699)
+    - [A really strong analysis.](http://www.sabinabysaavedra.com/2017/04/leningrado.html)
+- [Spanish Anthems](https://open.spotify.com/playlist/3SaXWjdeH8Xc2d8kf4z7Be?si=sDeS52bwQqugBlKE-KUUMw)
+  - A party playlist with songs every Latino is guaranteed™️ to sing along to.
+
+### Productivity
+
+- You do you.
+  - I'm a strong believer in "you do you" for personal productivity.
+    - There is no recipe, there is no one-size-fits-all solution.
+      - If waking up early works for you, fine.
+      - If staying up late is your jam, whatever rocks your boat.
+      - If going on unorganized, unstructured work sprints gets you shipping, that's great.
+      - If building structured plans and accounting for every minute gets you productive, that's great too.
+    - It's all about you, and screw whatever others think.
+  - Don't listen to how I work: Find whatever works for you.
+- Due to my ADHD, my "focus" is very unstructured.
+  - I have extremely high-output, laser-focused weeks.
+    - These weeks, I obsess _hard_ over whatever I'm building.
+    - I literally can't stop thinking for a moment about what I'm doing.
+  - I have low-output, unfocused weeks.
+    - These weeks, I can't point my brain anywhere.
+
 ### Dating
 
 - Make me a playlist.
-  - Music is my love language. 
-- I'm a strong believer in "you pay for your stuff, I pay for my stuff".
+  - Music is my love language.
+- Let's go roadtripping.
+  - None of that restaurant or movies stuff, let's go on an all-day adventure.
+  - The best way to bond with someone is through shared memories in nature.
+- You pay for your stuff and I pay for my stuff.
   - If we're going on a date, you're buying your own lunch and I'll pay mine. If we're both using a service, we split the bill.
-  - Every once in a while, I'll buy my partner stuff or pay for a lunch though: it doesn't mean "be a bad partner".
-  - I believe in a strong relationship, both folks should be financially independent.
+  - Every once in a while, I'll buy you stuff or pay for a lunch: I'm not a bad partner either.
+  - I believe that in a strong relationship both folks should be financially independent.
 
 ### Quotes
 
