--- a/pages/lists.mdx
+++ b/pages/lists.mdx
@@ -56,7 +56,7 @@ This list of lists is an endless work in progress, so come back to check frequen
       - If staying up late is your jam, whatever rocks your boat.
       - If going on unorganized, unstructured work sprints gets you shipping, that's great.
       - If building structured plans and accounting for every minute gets you productive, that's great too.
-    - It's all about you, and screw whatever others think.
+    - It's all about you and screw whatever others think.
   - Don't listen to how I work: Find whatever works for you.
 - Due to my ADHD, my "focus" is very unstructured.
   - I have extremely high-output, laser-focused weeks.
