--- a/pages/lists.mdx
+++ b/pages/lists.mdx
@@ -33,7 +33,7 @@ This list of lists is an endless work in progress, so come back to check frequen
   - One of the most beautiful songs I've ever heard, right up there with [Eclipse by Natalia Lafourcade](https://open.spotify.com/track/3gEQc4TtNyDxkwhQhLQTuw?si=my2__Lr2S6e5WfbIqHp-jw).
 - [Green Eyes, Uncle Chris](https://open.spotify.com/track/31WU1s85w50W8gWzkP6Qmz?si=bUEuqSasQ_6MoRhfX-lx9w)
   - Someone dedicated this song to me and I still think that it's the most charming thing that anyone has done for me.
-  - [*But those green eyes, they don't lie... You're giving me some mean butterflies.*](https://genius.com/Uncle-chris-green-eyes-lyrics)
+  - ["But those green eyes, they don't lie... You're giving me some mean butterflies."](https://genius.com/Uncle-chris-green-eyes-lyrics)
 - [Careful Listening](https://open.spotify.com/playlist/0wl0VvhexoOVYrrURGC7lo?si=nV4KcQ1FQ8ewHPhx3CyGVw)
   - This playlist is full of musically intense songs.
 - [House Vibes](https://open.spotify.com/playlist/5pgEceOwH8twhsrFPsIyMg?si=yAKkLo6rRcSd9bTDtMdXKA)
