--- a/pages/lists.mdx
+++ b/pages/lists.mdx
@@ -47,6 +47,10 @@ This list of lists is an endless work in progress, so come back to check frequen
     - [A really strong analysis.](http://www.sabinabysaavedra.com/2017/04/leningrado.html)
 - [Spanish Anthems](https://open.spotify.com/playlist/3SaXWjdeH8Xc2d8kf4z7Be?si=sDeS52bwQqugBlKE-KUUMw)
   - A party playlist with songs every Latino is guaranteed™️ to sing along to.
+  
+### Life
+- The best thing one can do to be less shy is to... start waving and smiling.
+  - I've started waving at people from my car. I don't even know them.
 
 ### Productivity
 
