--- a/pages/lists.mdx
+++ b/pages/lists.mdx
@@ -52,6 +52,11 @@ This list of lists is an endless work in progress, so come back to check frequen
 - The best thing one can do to be less shy is to... start waving and smiling.
   - I've started waving at people from my car. I don't even know them.
 
+### Goals
+- I'm building the first Puerto Rican unicorn. 
+  - It's forever been my dream. 
+  - I'm not fucking around. It's getting done. 
+
 ### Productivity
 
 - You do you.
