--- a/pages/lists.mdx
+++ b/pages/lists.mdx
@@ -90,3 +90,4 @@ This list of lists is an endless work in progress, so come back to check frequen
 ### Quotes
 
 - "Your happiness is intertwined with your outlook on life."
+- "Think bigger." - Someone who shall remain nameless
