--- a/pages/lists.mdx
+++ b/pages/lists.mdx
@@ -109,4 +109,4 @@ This list of lists is an endless work in progress, so come back to check frequen
 - "Your happiness is intertwined with your outlook on life."
 - "Think bigger."
 - "The one thing I dread is that my talks should be so frequent as to lose their effectiveness. ... Every time I talk over the air it means four or five days of long, overtime work in the preparation of what I say. Actually, I cannot afford to take this time away from more vital things. I think we must avoid too much personal leadership—my good friend Winston Churchill has suffered a little from this."
-  - FDR when asked about the possibility of hosting weekly "Fireside Chats" on radio
+  - FDR when asked about the possibility of hosting weekly fireside chats on radio
